style/style.css
body {
    font-family: sans-serif;
    font-size: 16px;
    padding: 10px;
    line-height: 1.5em;
    background: #f1f1f1;
}

.header {
    padding-bottom: 74px;
    padding-top: 12px;
    width: 100%;
    height: 64px;
    font-size: 20px;
    text-align: center;
    background: white;
}

a {
    color: #2e3436
}

.leftcolumn {
    float: left;
    width: 69%;
}

.rightcolumn {
    float: right;
    width: 30%;
}

img {
    width: 90%;
}

.card {
    background-color: white;
    margin-top: 20px;
    padding: 5%;
}

.row:after {
    content: '';
    display: table;
    clear: both;
}

.footer {
    padding: 20px;
    text-align: center;
    background: #ddd;
    margin-top: 20px;
}

.foot-notes {
    font-style: italic;
}

.codeblock {
    font-family: monospace;
    color: #ddd;
    font-size: 16px;
    background: #2e3436;
    border: 10px solid grey;
    margin: 10px;
    padding: 10px;
    overflow-x: scroll;
}

.formula {
    font-family: serif;
    font-size: 1.4em;
    height: 1.4em;
    text-indent: 5%;
}

.quote {
    font-style: italic;
    text-indent: 5%;
    padding: 5px;
    margin-top: 5px;
    background: #ddd;
}

.indent {
    text-indent: 5%;
}

table {
    border-collapse:collapse;
    border:1px solid #000000;
    padding:10px;
}
    
table td {
    border:1px solid #000000;
    padding:10px
}

table th {
    border:1px solid #000000;
    padding:10px
}

@media screen and (max-width: 1024px) {
    .leftcolumn {
        width: 100%;
        float: none;
        font-size: 30px;
    }

    .rightcolumn {
        float: none;
        width: 100%;
        font-size: 30px;
    }

    .card {
        margin-top: 20px;
        padding: 5%;
    }

    .codeblock {
        font-size: 24px;
    }
}

